2001-05-10  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* boot-9.scm (resolve-module): Abstraction maintenance: Use
	`module-public-interface'.
	(resolve-module): Extend to handle selection and renaming in spec.
	Arg is now `spec' which can be a simple module name (list of symbols)
	or a interface spec.
	(symbol-prefix-proc): New proc.
	(%autoloader-developer-mode): Delete.
	(process-define-module): Use "define-module" in error messages
	instead of "defmodule".  Factor error into internal proc.
	Rewrite `use-module' and `use-syntax' handlers.
	Replace some single-arm `if-not' constructs w/ `or'.
	(process-use-modules): Arg is now `module-interface-specs',
	which is passed through to `resolve-interface' as before; nfc.
	(named-module-use!, top-repl): Abstraction maintenance: Use
	`provided?'.

2001-05-06  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* q.scm, runq.scm, getopt-long.scm: Update copyright.
	Surround commentary w/ standard markers; nfc.

	* expect.scm: Update copyright.
	Fix commentary typo; nfc.

2001-05-05  Rob Browning  <rlb@cs.utexas.edu>

	* psyntax.ss: make sure emacs knows it's scheme code.

2001-05-05  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (use-syntax): Change error message to say
	`use-syntax' rather than `use-modules'.

2001-05-02  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* safe-r5rs.scm: Fix typo: make-rectangualr => make-rectangular.

2001-05-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (begin-deprecated): New.
	(call-with-deprecation): Removed.
	(id): Use `issue-deprecation-warning' instead of
	`call-with-deprecation'.  Wrap definition in `begin-deprecated'.
	(eval-in-module): Manifest deprecation via `begin-deprecation' and
	`issue-deprecation-warning'.
	(warn-autoload-deprecation): Deactivated.

2001-04-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (the-module, set-current-module, current-module):
	Removed, they are now defined in libguile.

2001-04-29  Gary Houston  <ghouston@arglist.com>
